<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright (C) 2015 Jordi Mas i Hernàndez <jmas@softcatala.org>
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation; either version 2 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public
 * License along with this program; if not, write to the
 * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 * Boston, MA 02111-1307, USA.
 */

-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">LanguageTool proofreader</string>
    <string name="spellchecker_name">LanguageTool proofreader</string>
    <string name="subtype_generic" translatable="false">%s</string>
    <string name="sample_settings">Preferences</string>
    <string name="version">Version</string>
    <string name="server">Server</string>
    <string name="requests">Requests to the proofreader server</string>
    <!-- %s is the version number and %s the date (e.g Sun Feb 28) -->
    <string name="version_text" formatted="false">%s (built on %s)</string>
    <!-- %d is the number of connections and %s the date (e.g Sun Feb 28) -->
    <string name="connections" formatted="false">%d (last %s)</string>
    <!-- Used on the string (last %s) when there is connection yet -->
    <string name="connection_none">none</string>
    <string name="welcome">Welcome to LanguageTool proofreader!</string>
    <string name="installation_title">Installation</string>
    <string name="limitations_title">Limitations</string>
    <string name="install_steps">To configure this application, follow these steps:\n
        1. Go to Settings -> Languages &amp; input -> Spell checker.\n
        2. Select the "LanguageTool proofreader" as "Default spell checker."\n
    </string>
    <string name="app_limitations">Known limitations:\n
        1. Some manufacturers like Samsung remove the preferences that make possible select 3rd party spell checkers like this.\n
        2. Some keyboards (e.g Yandex keyboard) ignore the configuration of 3rd party spell checkers.\n
        \nOverall due to Android ecosystem fragmentation in API and UI configuration layers a significant combination of devices do not work with this application.
    </string>
    <string name="button_close">Close</string>
    <string name="language">Language</string>
    <string name="language_summary">Uses the system language by default, but you can also use automatic detection or set it to a specific language.</string>
    <string name="mother_tongue">Mother tongue</string>
    <string name="mother_tongue_summary">The language code of your native language, enabling false friends checks for some language pairs.</string>
    <string name="preferred_variants">Preferred variants</string>
    <string name="preferred_variants_summary">List of preferred language variants. The automatic language detector can detect e.g. English, but it cannot decide whether British English or American English is used. Thus this parameter can be used to specify the preferred variants like en-GB and de-AT. </string>
    <string name="button_settings">Settings</string>
</resources>