<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright (C) 2015 Jordi Mas i Hernàndez <jmas@softcatala.org>
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation; either version 2 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public
 * License along with this program; if not, write to the
 * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 * Boston, MA 02111-1307, USA.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/sample_settings">

    <PreferenceCategory app:allowDividerAbove="true">

        <EditTextPreference
            android:enabled="true"
            android:inputType="textUri"
            android:key="server"
            android:selectable="true"
            android:title="@string/server"
            app:allowDividerAbove="true" />

        <ListPreference
            android:defaultValue="auto"
            android:enabled="true"
            android:entries="@array/language_names_special"
            android:entryValues="@array/language_codes_special"
            android:key="language"
            android:selectable="true"
            android:summary="@string/language_summary"
            android:title="@string/language" />

        <ListPreference
            android:defaultValue="none"
            android:enabled="true"
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:key="mother_tongue"
            android:selectable="true"
            android:summary="@string/mother_tongue_summary"
            android:title="@string/mother_tongue" />

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:enabled="true"
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:key="preferred_variants"
            android:selectable="true"
            android:summary="@string/preferred_variants_summary"
            android:title="@string/preferred_variants" />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            android:enabled="true"
            android:key="http"
            android:selectable="false"
            android:summary=""
            android:title="@string/requests" />

        <Preference
            android:enabled="true"
            android:key="version"
            android:selectable="false"
            android:summary=""
            android:title="@string/version" />

    </PreferenceCategory>

</PreferenceScreen>
